<resources>
    <string name="app_name">Recipes Hunter</string>
    <string name="action_settings">Settings</string>
    <string name="search_recipe_text">Search for a recipe…</string>
    <string name="search_recipe_submit">Search</string>
    <string name="search_recipe_favourites_button">Favourites</string>

    <string name="recipe_details_show_instructions">See detailed instructions</string>
    <string name="recipe_details_add_to_favs">Add to favourites</string>
    <string name="hint_recipe_name">Recipe name</string>
    <string name="hint_publisher_name">Publisher name</string>
    <string name="hint_social_rank">X/100</string>
    <string name="no_connection_error">Server couldn\'t be reached.</string>
    <string name="no_internet_access_text">No internet access.</string>
    <string name="results_for">Results for \"%s\"</string>
    <string name="results_for_empty">Top recipes</string>
    <string name="favourite_recipes">Favorite recipes</string>
    <string name="details">Details</string>
    <string name="no_results_for_query">No results found for your query.</string>
    <string name="removed_from_favourites">" removed from favourites."</string>
    <string name="couldnt_remove_recipe_from_db">Couldn\'t remove recipe from database.</string>
    <string name="favourtes_couldnt_be_loaded">Favourites couldn\'t be loaded.</string>
    <string name="ingredients_list_view_header">Ingredients</string>
    <string name="added_to_favourites">" added to favourites."</string>
    <string name="favourites_list_empty">No recipes in your favourites list.</string>
    <string name="ingredients_cannot_be_loaded">Ingredients couldn\'t be loaded.</string>
    <string name="cannot_download_recipe_ingredients">Could not download recipe ingredients.</string>
    <string name="server_cannot_be_reached">Server couldn\'t be reached.</string>
    <string name="cannot_add_to_favourites">Cannot add to favourites because ingredients data is missing.</string>
    <string name="swipe_to_remove_hint">Swipe to remove.</string>
</resources>
