<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/fragment_search_recipes"
    >

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/search_recipe_text"
        android:focusable="true"
        android:textAlignment="center"
        android:gravity="center"
        android:inputType="text"
        android:id="@+id/search_edit_text"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/search_recipe_submit"
        android:gravity="center|center_vertical"
        android:drawableEnd="@drawable/ic_search_18dp"
        android:id="@+id/search_submit_button"
        />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/search_recipe_favourites_button"
        android:gravity="center|center_vertical"
        android:drawableEnd="@drawable/ic_favorite_18dp"
        android:id="@+id/search_recipe_favourites_button"
        />

</LinearLayout>
