<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/list_item_recipe"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:background="?android:attr/selectableItemBackground"
    android:orientation="vertical"
    card_view:cardBackgroundColor="@color/cardViewBG"
    card_view:cardCornerRadius="@dimen/cardview_default_radius"
    card_view:cardElevation="@dimen/cardview_default_elevation"
    card_view:cardUseCompatPadding="false"
    card_view:contentPaddingBottom="24dp"
    card_view:contentPaddingLeft="16dp"
    card_view:contentPaddingRight="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_item_recipe_title"
            style="@style/TextHeadline"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_toLeftOf="@+id/list_item_recipe_image"
            android:hint="@string/hint_recipe_name"
            android:paddingRight="18dp"
            android:paddingTop="24dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/list_item_recipe_publisher_name"
            style="@style/TextSubheading"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/list_item_recipe_title"
            android:layout_toLeftOf="@+id/list_item_recipe_image"
            android:hint="@string/hint_publisher_name"
            android:paddingRight="18dp"
            android:textColor="#FFFFFF" />

        <TextView
            android:id="@+id/list_item_recipe_social_rank"
            style="@style/TextBody"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/list_item_recipe_publisher_name"
            android:hint="@string/hint_social_rank"
            android:textColor="#FFFFFF" />

        <ProgressBar
            android:id="@+id/list_item_recipe_loading_spinner"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:paddingTop="16dp" />

        <ImageView
            android:id="@+id/list_item_recipe_image"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:paddingTop="24dp"
            android:scaleType="centerCrop" />

    </RelativeLayout>

</android.support.v7.widget.CardView>
